--- a/src/Journey.Application/Journey.Application.csproj
+++ b/src/Journey.Application/Journey.Application.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UseCases\" />
+    <Folder Include="UseCases\Trips\Delete\" />
   </ItemGroup>
 
 </Project>
